ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1/input.ts:2:4
  |
2 | a--.toString()
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Expressions/parserMemberAccessAfterPostfixExpression1/input.ts:2:1
  |
2 | a--.toString()
  | ^^^

